# digihistch24.github.io

./: .gitattributes  .gitignore  .nojekyll  CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  LICENSE-AGPL.html  LICENSE-CCBYSA.html  README.md  SECURITY.html  _quarto.yml  about.html  about.qmd  book-of-abstracts.html  call-for-contributions.html  call-for-contributions.qmd  conference-program.html  conference-program.qmd  custom-header.html  index.html  index.qmd  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  theme-dark.css
.github/workflows/: changelog.yaml  quarto-publish.yml
about/: code-of-conduct.html  terms-and-conditions.html  terms-and-conditions.qmd
call-for-contributions/: key-dates.html  review-process.html  submission-guidelines.html  submission-guidelines.qmd
conference-program/: info-event-digital-history-network-switzerland.html  info-event-ssh-ord.html  info-event-ssh-ord.qmd  practical-information.html  practical-information.qmd  schedule.html  schedule.qmd
fonts/: LICENSE-OFL.html
scripts/: generate-llms-txt.py
site_libs/bootstrap/: bootstrap-08c37dbed99bbc7852b8206bbde423d8.min.css  bootstrap-1e940c2aee93852aa4997d3316081b82.min.css  bootstrap-9e383c5ccf0a05ca34f343a21990b618.min.css  bootstrap-c24741c7e7503662b0e650618aa76866.min.css  bootstrap-dark-6d814900fdeec288d9f5408c547930bb.min.css  bootstrap-dark-91527baf10d327f335c9fd684f3e14c5.min.css  bootstrap-dark-a67b6a09abc14ebca2d15a9b768d1bc7.min.css
submissions/: _metadata.yml
(+92 files in other folders)
