[project]
name = "digihistch24"
version = "0.1.0"
description = "Build tooling for the DigiHistCH24 Quarto site"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6,<7",
    "pandas>=2,<3",
    "matplotlib>=3,<4",
]

[dependency-groups]
dev = [
    "jupyter>=1,<2",
]

[tool.uv]
package = false
